--- a/Demos/06-Message-Brokers/EventGrid/Demo-02/food-orders-ui/src/app/app.component.html
+++ b/Demos/06-Message-Brokers/EventGrid/Demo-02/food-orders-ui/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="content" role="main">
-  <h2>Orders received {{ events.length }}</h2>
-
-  <div class="card" *ngFor="let event of events">
-    <span>{{ event }}</span>
-  </div>
-</div>
+<app-orders></app-orders>
